@@ -198,6 +198,7 @@ com.github.bleakgrey.tootle=applications,symlink
 com.github.dahenson.agenda=applications,symlink
 com.github.johnfactotum.Foliate=applications,symlink
 com.github.phase1geo.minder=applications,symlink
+com.github.tchx84.Flatseal=applications,symlink
 com.gitlab.newsflash=applications,symlink
 conkeror=applications,symlink
 conky=applications,symlink
