@@ -1,6 +1,6 @@
 [metadata]
 name = firecfg.py
-version = 0.0.5
+version = 0.0.6
 url = https://github.com/rusty-snake/firecfg.py
 author = rusty-snake
 maintainer = rusty-snake
